<!--
  ~ Copyright (c) 2018, Chiswick Forest
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~         http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and limitations under the License.
  -->

<resources>
    <string name="app_name">Zworkout</string>
    <string name="title_workout_detail">Workout Detail</string>

    <string name="list_loading_error_message">Unable to list workouts</string>
    <string name="list_loading">Loading workouts…</string>
    <string name="list_empty">There are no workouts. Create one by pressing on the button below.</string>

    <!--Detail screen-->
    <string name="detail_name_hint">Workout name</string>
    <string name="detail_description_hint">Details about the workout</string>
    <string name="detail_loading">Loading efforts…</string>
    <string name="detail_empty">No efforts in this workout.</string>
    <string name="workout_save_error_message">Unable to save this workout</string>
    <string name="workout_menu_save">Save</string>
    <string name="workout_menu_add">New Effort</string>
    <string name="workout_efforts_item_steady_state_name">Steady state</string>
    <string name="workout_efforts_item_steady_state_duration">%d s</string>
    <string name="workout_efforts_item_steady_state_duration_hint">Sec.</string>
    <string name="workout_efforts_item_steady_state_power_hint">Power</string>
    <string name="workout_efforts_item_steady_state_cadence_hint">rpm</string>
    <string name="workout_efforts_item_ramp_up_name">Ramp Up</string>
    <string name="workout_efforts_item_ramp_up_duration_hint">Sec.</string>
    <string name="workout_efforts_item_ramp_up_start_power_hint">Start</string>
    <string name="workout_efforts_item_ramp_up_end_power_hint">End</string>
    <string name="workout_efforts_item_ramp_down_name">Ramp Down</string>
    <string name="workout_efforts_item_ramp_down_duration_hint">Sec.</string>
    <string name="workout_efforts_item_ramp_down_start_power_hint">Start</string>
    <string name="workout_efforts_item_ramp_down_end_power_hint">End</string>

    <string name="workout_effort_power_completion_hint">A fraction of FTP or a zone (e.g. Z1)</string>

</resources>
