<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018, Chiswick Forest
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~         http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and limitations under the License.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_margin"
        android:text="@string/workout_efforts_item_steady_state_name" />

    <EditText
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/workout_efforts_item_steady_state_duration_hint"
        android:inputType="number"
        android:minEms="3"
        app:layout_constraintBaseline_toBaselineOf="@id/name"
        app:layout_constraintStart_toEndOf="@id/name" />

    <TextView
        android:id="@+id/power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:completionHint="@string/workout_effort_power_completion_hint"
        android:completionThreshold="1"
        android:dropDownWidth="match_parent"
        android:hint="@string/workout_efforts_item_steady_state_power_hint"
        android:minEms="3"
        app:layout_constraintBaseline_toBaselineOf="@id/duration"
        app:layout_constraintStart_toEndOf="@id/duration" />

    <EditText
        android:id="@+id/cadence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/workout_efforts_item_steady_state_cadence_hint"
        android:inputType="number"
        android:minEms="3"
        app:layout_constraintStart_toStartOf="@id/power"
        app:layout_constraintTop_toBottomOf="@id/power" />

</android.support.constraint.ConstraintLayout>